<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/mainBack"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.assignment3.View.FavDetailedView">

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/ratingColour"
        android:text="@string/deleteBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <EditText
        android:id="@+id/plot"
        android:layout_width="374dp"
        android:layout_height="90dp"
        android:gravity="start"
        android:text="@string/noValue"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="52dp"
        android:layout_height="26dp"
        android:textColor="@color/ratingColour"
        android:textStyle="bold"
        android:text="@string/noValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/noValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/year"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/noValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/updateBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/backToListBtn"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/backBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <ImageView
        android:id="@+id/fullPoster"
        android:layout_width="374dp"
        android:layout_height="416dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:srcCompat="@android:drawable/alert_dark_frame" />

    <TextView
        android:id="@+id/title"
        android:layout_width="374dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        android:text="@string/noValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <TextView
        android:id="@+id/runtime"
        android:layout_width="51dp"
        android:layout_height="26dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/noValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

</androidx.constraintlayout.widget.ConstraintLayout>